# frclib-datalog

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  reader.rs  test.rs  writer.rs
src/proto/: entries.rs  mod.rs  records.rs  util.rs
test_logs/: .gitignore
