[package]
name = "frclib-datalog"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/oh-yes-0-fps/frclib-datalog"
description = "An implementation of WPI's DataLog spec"

[dependencies]
bimap = "0.6.3"
serde = { version = "^1", features = ["derive"] }
thiserror = "1.0.40"
single_value_channel = "1.2.2"
bitflags = "2.6"
frclib-core = { version = "0.2.4", features = ["basic", "time"] }
byteorder = "1.5.0"

[profile.release]
lto = true
