[package]
name = "frclib-datalog"
version = "0.1.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/oh-yes-0-fps/frclib-datalog"
description = "An implementation of WPI's DataLog spec"

[dependencies]
thiserror = "1.0.40"
bitflags = "2.6"
frclib-core = { version = "0.2.4", features = ["basic", "time"] }
byteorder = "1.5.0"
nohash = "0.2.0"

[profile.release]
lto = true
